# PennCloud

./: .gitignore  README.md
Coordinator/: CMakeLists.txt  dependencies.sh  server_config.txt
Coordinator/proto/: coordinator.proto  server.proto
Coordinator/src/: CMakeLists.txt  Client.cc  Client.h  Commons.cc  Commons.h  Communicator.cc  Communicator.h  Heartbeat.cc  Mapper.cc  main.cc
Frontend/: .gitignore  CMakeLists.txt  README.md  dependencies.sh
Frontend/client/: CMakeLists.txt
Frontend/client/src/: BalancerClient.cc  BalancerClient.h  Client.cc  Client.h  CoordinatorClient.cc  CoordinatorClient.h  EmailClient.cc  EmailClient.h  EmailUtils.cc  EmailUtils.h  File.h  FileUtils.cc  FileUtils.h  FrontendServer.cc  FrontendServer.h  HttpConnection.cc  HttpConnection.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  RequestHandler.cc  RequestHandler.h  Session.cc  Session.h  frontend.cc  server_config.txt  utils.cc  utils.h
Frontend/client/src/webpages/: admin.txt  change_pwd.txt  forward_page.txt  inbox.txt  login.txt  menu.txt  old_inbox.txt  raw_data.txt  register.txt  reply_page.txt  storage.txt  view_data.txt  view_email.txt
Frontend/proto/: coordinator.proto  load_balancer.proto  server.proto
KeyValueStore/: .gitignore  CMakeLists.txt  README.md
KeyValueStore/client/: CMakeLists.txt
KeyValueStore/client/src/: Client.cc  Client.h
KeyValueStore/proto/: coordinator.proto  interserver.proto  server.proto
KeyValueStore/server/: CMakeLists.txt  s2.txt
KeyValueStore/server/src/: Constants.h  CoordinatorLogic.cc  CoordinatorLogic.h  InterServerLogic.cc  InterServerLogic.h  RecoveryUtils.cc  RecoveryUtils.h  ServiceLogic.cc  ServiceLogic.h  checkpoint.cc  checkpoint.h  main.cc
KeyValueStore/server/src/dataModel/: BigTable.cc  BigTable.h  SharedContext.h
KeyValueStore/server/src/managers/: ServerManager.cc  ServerManager.h  TabletManager.h
KeyValueStore/server/src/utils/: ClearFiles.h  FileWriteUtils.cc  FileWriteUtils.h  Logger.h  MiscUtils.cc  MiscUtils.h  ReplicationUtils.h
LoadBalancer/: CMakeLists.txt  README.md
LoadBalancer/server/: CMakeLists.txt
LoadBalancer/server/src/: GrpcServer.cc  GrpcServer.h  HttpConnection.cc  HttpConnection.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  LoadBalancer.cc  LoadBalancer.h  balancer.cc  server_config.txt  utils.cc  utils.h
MailServer/: CMakeLists.txt  README.md
MailServer/proto/: coordinator.proto  server.proto  smtpClient.proto  smtp_server.proto
MailServer/server/: CMakeLists.txt
MailServer/server/src/: Client.cc  Client.h  ComposeService.cc  ComposeService.h  GRPCCalls.cc  GRPCCalls.h  SMTPClient.cc  email.cc  email.h  pop3.cc  smtp.cc  smtp.grpc.pb.cc  smtp.pb.cc  thunderbird.cc
